Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70772

[5.10->5.11 regression] Activity can not be restarted from service notification

XMLWordPrintable

    • Android
    • 8880ef79311d283a1357ca0c14be6e56281ba5f0 (qt/qtbase/5.12)

      If an application has a foreground service (with notification) and the activity is closed, when trying to start the activity by clicking notification, application freezes. Steps to reproduce the problem:

      1) Start application

      2) In Android task manager close the application (service is still running)

      3) Click the service notification

      Expected behavior: Application will start.

      Actual behavior: Application freezes right after start, even onCreate function of my activity is not executed.

       
      It works correctly in Qt 5.9 and 5.10. Since 5.11 the behavior is broken as explained above.

      I created a test application to demonstrate the bug. It is a slightly modified example of android service. Please note that while compiling the example with Qt older then 5.11.2, you will run into QTBUG-69755 and will need to use the workaround for APK path.

        1. service.zip
          59 kB
        2. StartFromServiceTest.zip
          61 kB
        3. patch.diff
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            taipan BogDan Vatra
            jech Vladimír Jícha
            Votes:
            10 Vote for this issue
            Watchers:
            16 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes